Move some reporting tools to PluginCore. Test uncovered a long time bug - content files from dependent projects are not automatically included in the setup project. You have to add them explicitly to the setup.

--- a/PluginCore/Reports/AllReports.css
+++ b/PluginCore/Reports/AllReports.css
@@ -14,6 +14,7 @@
     font-size: 32px;
     font-weight: bold;
     text-align: center;
+	font-style: italic;
 }
 
 .ReportTitle
